@@ -35,7 +35,7 @@ class activiteActions extends sfActions
      */
     public function executeIndex(sfWebRequest $request)
     {
-        $this->activite_list = ActivitePeer::doSelectEnabled($this->getUser()->getAttribute('association_id', null, 'user'));
+        $this->activite_list = ActivitePeer::doSelectEnabled($this->getUser()->getAssociationId());
     }
 
     /**
@@ -56,7 +56,7 @@ class activiteActions extends sfActions
         $this->dettes     = DepensePeer::getAmountOfDettesForActivite($activiteId);
         $this->totalPrevu = $this->creances - $this->dettes;
 
-        if ($this->activite->getAssociationId() == $this->getUser()->getAttribute('association_id', null, 'user'))
+        if ($this->activite->getAssociationId() == $this->getUser()->getAssociationId())
         {
             $this->forward404Unless($this->activite);
         }
@@ -88,8 +88,6 @@ class activiteActions extends sfActions
     {
         $this->forward404Unless($request->isMethod('post'));
         $this->form = new ActiviteForm();
-        $this->form->setDefault('mis_a_jour_par', $this->getUser()->getUserId());
-        $this->form->setDefault('association_id', $this->getUser()->getAssociationId());
         $this->processForm($request, $this->form);
         $this->setTemplate('new');
     }
@@ -111,7 +109,6 @@ class activiteActions extends sfActions
 
         $this->form = new ActiviteForm($activite);
         $this->form->setDefault('mis_a_jour_par', $this->getUser()->getUserId());
-        $this->form->setDefault('association_id', $this->getUser()->getAssociationId());
     }
 
     /**
@@ -124,8 +121,6 @@ class activiteActions extends sfActions
         $this->forward404Unless($request->isMethod('post') || $request->isMethod('put'));
         $this->forward404Unless($activite = ActivitePeer::retrieveByPk($request->getParameter('id')), sprintf('L\'activité (%s) n\'existe pas.', $request->getParameter('id')));
         $this->form = new ActiviteForm($activite);
-        $this->form->setDefault('mis_a_jour_par', $this->getUser()->getUserId());
-        $this->form->setDefault('association_id', $this->getUser()->getAssociationId());
         $this->processForm($request, $this->form);
         $this->setTemplate('edit');
     }
